# WebWhispere-Advanced_AI_Agent_Framework_for_Personalized_Assistance

./: .gitignore  README.md
web_scrapper/: README.md  pyproject.toml
web_scrapper/src/: crew.py  main.py
web_scrapper/src/config/: agents.yaml  tasks.yaml
