[tool.poetry]
name = "web_scrapper"
version = "0.0.1"
description = "This is the start of your AgentStack project."
authors = ["Name <Email>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
agentstack = {extras = ["crewai"], version = "^0.2.3"}
firecrawl-py = "^1.8.0"

[project.scripts]
web_scrapper = "web_scrapper.main:run"
run_crew = "web_scrapper.main:run"
train = "web_scrapper.main:train"
replay = "web_scrapper.main:replay"
test = "web_scrapper.main:test"